--- a/index.html
+++ b/index.html
@@ -75,9 +75,22 @@
 			</div>
 
 			<div class="tech-details">
-				<div class="tech-details-name"><h2>Front-End</h2> HTML5, CSS3, JavaScript, BootStrap</div>
-				<div class="tech-details-name"><h2>Back-End</h2>  Java, Servlet, Spring Boot</div>
-				<div class="tech-details-name"><h2>Other</h2> Web-Crawler(PySpider), Solr, Redis</div>
+				<div class="tech-details-name"><h2>Front-End</h2> 
+					<span>HTML5</span> : some, 
+					<span>CSS3</span>: some, 
+					<span>JavaScript</span> : some, 
+					<span>BootStrap</span> : some
+				</div>
+				<div class="tech-details-name"><h2>Back-End</h2>  
+					<span>Java</span> : lot, 
+					<span>Servlet</span> : some, 
+					<span>Spring Boot</span> : lot
+				</div>
+				<div class="tech-details-name"><h2>Other</h2> 
+					<span>Web-Crawler(PySpider)</span>, 
+					<span>Solr</span>, 
+					<span>Redis</span>
+				</div>
 			</div>
 		</div>
 
@@ -108,8 +121,8 @@
 					<li>Built a Social News Aggregation and Discussion Website using Spring Boot, Velocity and MyBatis on a team of 3</li>
 					<li>Created own Login Controller and Interceptor to implement basic token-based registration/login/logout flow</li>
 					<li>Utilized Redis to build own Asynchronized framework to better handle additional events after some specific operations</li>
-					<li>Designed push & pull model based on number of followers (> 500 followers or not) and followers’ activeness to optimize the implementation of Timeline</li>
-					<li> Used PySpider Web Crawler framework to get 16700+ posts from 3 sites to generate wide-ranged topics and got a satisfaction rate of 87.03%from 54 people in current development state</li>
+					<li>Designed push & pull model based on number of followers (> 500 followers or not) and followers' activeness to optimize the implementation of Timeline</li>
+					<li> Used PySpider Web Crawler framework to get 16700+ posts from 3 sites to generate wide-ranged topics and got a satisfaction rate of 87.03% from 54 people in current development state</li>
 				</div>
 			</div>
 		</div>
