--- a/index.html
+++ b/index.html
@@ -64,5 +64,8 @@
       <li>WPI - ITS Desk</li>
       <li>Newport News Shipbuilding  - Augmented Reality Research</li>
     </ul>
+	
+	 <a href="https://www.wpi.edu/">WPI's main website</a> <br>
+	 <a href="https://cs4241-18a.github.io/">Class Website</a> 
   </body>
 </html>
