made final edits to website and updated readme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<html lang="en">
   <head>
-    <title>CS4241 Assignment 1</title>
+    <title>Robert Harrison: CS4241 A1</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -13,24 +13,35 @@
           I am a Computer Science major with a Psychology minor.
       </p>
       <p>
-          I have previosuly taken the Human Computer Interaction course at WPI, as well as Artificial Intelligence,
-          Software Security, and Foundations of Computer Science among others.
+          I am also a member of two comedy groups on campus: Kilroy Sketch Comedy and Empty Set. 
       </p>
-      <img src="/imgs/pizzaJoint.jpg" alt="Pizza Joint Logo" />
       <h2>Experience</h2>
-      <table align="center">
-          <tr>
-              <td>
-                  <img src="images/pizzaJoint.jpg" alt="Pizza Joint Logo" width="200" height="200" />
-              </td>
-              <td>
-                  <img src="images/teradyneLogo.jpg" alt="Teradyne Logo" />
-              </td>
-          </tr>
-          <tr>
-              <td></td>
-          </tr>
-      </table>
+      <h3>Relevant Class Experience</h3>
+      <ul align="left">
+          <li>1101: Introduction to Program Design</li>
+          <li>2011: Introduction to Machine Organization and Assembly Language</li>
+          <li>2022: Discrete Mathematics</li>
+          <li>2102: Object-Oriented Design Concepts</li>
+          <li>2223: Algorithms</li>
+          <li>2303: Systems Programming Concepts</li>
+          <li>3013: Operating Systems</li>
+          <li>3041: Human-Computer Interaction</li>
+          <li>3133: Foundations of Computer Science</li>
+          <li>3733: Software Engineering</li>
+          <li>4032: Numerical Methods for Linear ad Nonlinear Systems</li>
+          <li>4341: Introduction to Artificial Intelligence</li>
+          <li>4401: Software Security Engineering</li>
+          <li>3516: Computer Networks*</li>
+          <li>4241: Webware*</li>
+          <li>*= Currently enrolled</li>
+      </ul>
+      <h3>Internship Experience</h3>
+      <div align="center">
+          <a href="https://www.teradyne.com/">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/TeradyneLogo.png" alt="Teradyne Logo" width="500" height="150" />
+          </a>
+      </div>
+      <p><font size=1>Image retrieved from <a href="https://commons.wikimedia.org/wiki/File:TeradyneLogo.png">Wikimedia</a></font></p>
       <p>
           Over the summer, I worked in software drivers at Teradyne. There I worked on fixing various bugs and adding features to
           their High Speed subsytem, which is a chassis that can hold various testing equipment. All of the coding was done in C++, and C#.
@@ -42,16 +53,20 @@
               <th>Familiarity</th>
           </tr>
           <tr>
-              <td>HTML</td>
-              <td>some</td>
+              <td>Java</td>
+              <td>a lot</td>
+          </tr>
+          <tr>
+              <td>Python</td>
+              <td>a lot</td>
           </tr>
           <tr>
               <td>CSS</td>
               <td>some</td>
           </tr>
           <tr>
-              <td>Java</td>
-              <td>a lot</td>
+              <td>HTML</td>
+              <td>some</td>
           </tr>
           <tr>
               <td>Javascript</td>
@@ -62,12 +77,8 @@
               <td>none</td>
           </tr>
           <tr>
-              <td>Python</td>
-              <td>a lot</td>
-          </tr>
-          <tr>
               <td>Unit Testing</td>
-              <td>a lot</td>
+              <td>none</td>
           </tr>
       </table>
   </body>
