Listing Classes & Readme

--- a/index.html
+++ b/index.html
@@ -18,11 +18,24 @@
     <p>
       Computer Science Major. Business Minor. 
 	</p>
-	<p>Taken classes such as: Databases 1, software engineering, social implications, 
-       Operating systems, systems, assembly and machine org, pretty much all undergrad courses sans 4000 levels.
-    </p>
+	<p>Taken classes such as: 
+	<ul>
+		<li>Intro to Program Design</li>
+		<li>Object Oriented Design Concepts</li>
+		<li>Systems Programming Concepts</li>
+		<li>Intro to Machine Org and Assembly</li>
+		<li>Discrete Math</li>
+		<li>Algorithms</li>
+		<li>Foundations of Computer Science</li>
+		<li>Software Engineering</li>
+		<li>Social Implications of Information Processing</li>
+		<li>Operating Systems</li>
+		<li>Databases I</li>
+		<li>Databases</li>
+	</ul>
+	</p>
 
-	<table style="width:15%">
+	<table style="width:25%">
 		<tr>
 			<th>Language</th>
 			<th>Experience</th>
