--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</tr>
 		<tr>
 			<td>java</td>
-			<td>Experienced</td>
+			<td>A Lot Of Experience</td>
 		</tr>
 		<tr>
 			<td>Javascript</td>
@@ -58,7 +58,7 @@
 		</tr>
 		<tr>
 			<td>Python</td>
-			<td>Experienced</td>
+			<td>A Lot Of Experience</td>
 		</tr>
 		<tr>
 			<td>Unit Testing</td>
