--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
   </head>
   <body>
     <img src="headshot.jpg" alt="Profile Picture">
-    <h1>Information about Peter Maida</h1>
-    <p>
-      WPI class of 2020
-    </p>
-    <p>
-      Computer Science major
-    </p>
-    
+    <h1>Peter Maida</h1>
+    <h2>WPI Class of 2020</h2>
+    <h2>Computer Science</h2>
+
+    <p> About me... </p>
+
     <h2>Course Experience</h2>
     <ul>
-      <li>Software Engineering</li>
-      <li>Operating Systems</li>
-      <li>Foundations of Computer Science</li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3733">CS3733 - Software Engineering</a></li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3516">CS3516 - Computer Networks</a></li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3013">CS3013 - Operating Systems</a></li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3133">CS3133 - Foundations of Computer Science</a></li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_3043">CS3043 - Social Implications</a></li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2223">CS2223 - Algorithms</a></li>
+      <li><a href="https://www.wpi.edu/academics/calendar-courses/course-descriptions/computer-science#cs_2303">CS2303 - Systems Programming Concepts</a></li>
     </ul>
 
     <h2>Software Experience</h2>
