chore: add css styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
+  <style>
+    body {
+      background-color: #efefef;
+      font-weight: bold;
+    }
+    h1 {
+      color: #ff3b3f;
+      text-align: center;
+    }
+    h2 {
+      color: #68ddf7;
+      text-align: center;
+    }
+    h3 {
+      color: #797979;
+    }
+    p, li {
+      color: #797979;
+    }
+  </style>
   <body>
     <h1>Information about Stephanie Racca</h1>
     <p>
