--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html lang="en">
+  <style>
+    body{
+      background-color: #FEDCFA
+    }
+    </style>
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about Elizabeth Del Monaco </h1>
+    
+    <h1>Information about <font color = #AB0094> <u>
+      Elizabeth Del Monaco </font> </h1> </u>
     <p>
       Hello! My name is Elizabeth.
     </p>
@@ -19,5 +26,9 @@
     <p>
       No experience in HTML, CSS, JavaScript, Ruby. Moderate experience in unit testing and Python. Experienced in Java.
     </p>
+
+    <img src = "me.jpg" alt = "Profile Picture">
+    
+
   </body>
 </html>
