--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <p>
       Hello! My name is Elizabeth.
     </p>
+    <h2>Classes</h2>
+    <ol>
+      <li>CS 1101 </li>
+      <li> CS 2102 </li>
+      <li> CS 2303 </li>
+      <li> CS 2011 </li>
+      <li> CS 2223 </li>
+      <li> CS 3013 </li>
+      <li> CS 3041 </li>
+    
     <p>
       I am a junior at WPI studying CS. I am president of Women in Computer Science and I am a brother of Alpha Phi Omega.
     </p>
