more index changes

--- a/index.html
+++ b/index.html
@@ -6,18 +6,59 @@
   <body>
     <h1>Information about Paul-Henry Schoenhagen</h1>
     <p>
-      Hey there! I'm Paul-Henry Schoenhagen!
+      Hey there! I'm Paul-Henry Schoenhagen
     </p>
     <p>
-      [Major and other information]
+      Class of 2019. Major in Computer Science, Minor In Philosophy.
     </p>
+    <h3>Previous Computer Science Courses:</h3>
     <p>
-      [Other things]
+    CS 2102 OBJCT-ORIENTED DESIGN CONCEPTS
+    <br>
+    CS 3431 DATABASE SYSTEMS I
+    <br>
+    CS 3733 SOFTWARE ENGINEERING
+    <br>
+    CS 3041 HUMAN-COMPUTER INTERACTION
+    <br>
+    CS 2022 DISCRETE MATHEMATICS
+    <br>
+    CS 2223 ALGORITHMS
+    <br>
+    CS 2011 INTRO-MACHINE ORG & ASSEMBLY
+    <br>
+    CS 3043 SOCIAL IMPLICATIONS OF INFO PROCESSING
+    <br>
+    CS 4341 INTRO TO ARTIFICIAL INTELLIGENCE
+    <br>
+    CS 4801 INTRO CRYPTOGRPHY & COMMUNICATION SECURITY
+    <br>
+    CS 3133 FOUNDATIONS OF COMPUTER SCIENCE
+    <br>
+    CS 4432 DATABASE SYSTEMS II
+    <br>
+    CS 4513 DISTRIBUTED COMPUTER SYSTEMS
+    <br>
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+    I have experience in the following things, ranked on a scale of none, some and alot.
+    <br>
+    <strong>HTML:</strong> Alot
+    <br>
+    <strong>CSS:</strong> Alot
+    <br>
+    <strong>Java:</strong> Alot
+    <br>
+    <strong>JavaScript:</strong> Alot
+    <br>
+    <strong>Ruby:</strong> None
+    <br>
+    <strong>Python:</strong> Some
+    <br>
+    <strong>Unit Testing:</strong> Some
+    <br>
     </p>
     <ul>
       <li>IBM/Rational</li>
