--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <li> CS 3013 </li>
         <li> CS 3041 </li>
       </ol>
+   
+    <img src = "https://i.imgur.com/UMLjc2d.jpg" alt: "Profile Picture">
     
 
   </body>
