personalized the index.html

--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Grace Pelella</h1>
     <p>
-      [Self introduction]
+      Class of 2020
     </p>
     <p>
-      [Major and other information]
+      CS major
     </p>
     <p>
-      [Other things]
+      From California, the land of fire
+    </p>
+    <p>
+      CS 1101, CS 2102, CS 2011, CS 2223, CS 2303, CS 3041, CS 3043
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      HTML - a moderate amount </br>
+      CSS - I've dabbled </br>
+      Java - a lot, but it's been a while so some </br>
+      JavaScript - some </br>
+      Ruby - none </br>
+      Python - some </br>
+      unit testing - none (i think) 
     </p>
     <ul>
       <li>IBM/Rational</li>
