--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about James Kenney</h1>
     <p>
       [Self introduction]
     </p>
@@ -20,8 +20,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Sierra Olympic</li>
+      <li>Hood Technology</li>
     </ul>
   </body>
 </html>
