--- a/index.html
+++ b/index.html
@@ -4,16 +4,30 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Anthony Gringeri: Class of 2019</h1>
     <p>
-      [Self introduction]
+      I'm a senior at Worcester Polytechnic Institute majoring in Computer Science.
     </p>
     <p>
-      [Major and other information]
+      My Major: Computer Science
     </p>
     <p>
-      [Other things]
+      Classes I've taken: 
     </p>
+    <ul>
+      <li>CS 1101</li>
+      <li>CS 2102</li>
+      <li>CS 2011</li>
+      <li>CS 2303</li>
+      <li>CS 2223</li>
+      <li>CS 3013</li>
+      <li>CS 3733</li>
+      <li>CS 3043</li>
+      <li>CS 3133</li>
+      <li>CS 3041</li>
+      <li>CS 3431</li>
+      <li>CS 3516</li>
+    </ul>
 
     <h2>Experience</h2>
     <p>
