Corrected spelling errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img src="Render10.png" alt="Tomb" width="320" height="200">
 
           <p style="margin-left:5em; margin-right: 5em">
-            I've had coding expereince with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
+            I've had coding experience with Java, Python, unit testing, HTML, CSS and Ruby, but HTML, CSS and Ruby are still relatively new to me.
             I've never code in Javascript, so I'm looking forward to that!
           </p>
         </font>
@@ -30,7 +30,7 @@
       </center>
       <font face="verdana">
         <p style="margin-left:5em; margin-right: 5em">
-          My work experience involves summer interships working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
+          My work experience involves a summer internship working with the company <a href="https://www.jackpinetech.com">Jackpine Technologies</a>. While there, I was primarily working with Java, but they were the ones who initially exposed me to HTML, CSS and Ruby. 
         </p>
         <font face="georgia">
           <h2 style="margin-left:5em; margin-right: 5em">
