--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <html lang="en">
-  <head>
-    <title>CS4241 Assignment 1</title>
-    <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+<head>
+  <title>CS4241 Assignment 1</title>
+  <meta charset="utf-8">
+</head>
+<body>
+<h1>Information about Jack Palmstrom</h1>
+<p>
+  Hello, my name is Jack Palmstrom, and I am in the class of 2019 at WPI.
+</p>
+<p>
+  Major: Computer Science
+</p>
+<p>
+  Previous computer science courses at WPI: CS 1101, CS 2102, CS 2301, CS 2022, CS 2011, CS 2223, CS 3013, CS 3733, CS 3043, CS 3041, CS 3431
+</p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
+<h2>Experience</h2>
+<p>
+  Working experience
+</p>
+<ul>
+  <li>HTML: some</li>
+  <li>CSS: some</li>
+  <li>Java: a lot</li>
+  <li>JavaScript: none</li>
+  <li>Ruby: none</li>
+  <li>Python: some</li>
+  <li>Unit Testing: some</li>
+</ul>
+</body>
 </html>
