--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Information about Anthony Gringeri: Class of 2019</h1>
     <p>
-      I'm a senior at Worcester Polytechnic Institute majoring in Computer Science.
+      I'm a senior at Worcester Polytechnic Institute.
     </p>
     <p>
       My Major: Computer Science
@@ -15,7 +15,7 @@
       Classes I've taken: 
     </p>
     <ul>
-      <li>CS 1101</li>
+      <li>CS 1101: </li>
       <li>CS 2102</li>
       <li>CS 2011</li>
       <li>CS 2303</li>
@@ -34,8 +34,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Chegg Tutors</li>
+      <li>Accur8 Software</li>
     </ul>
   </body>
 </html>
