Edit index.html to include my own information

--- a/index.html
+++ b/index.html
@@ -4,24 +4,40 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Trevor Weiler</h1>
     <p>
-      [Self introduction]
+      I am a member of the Class of 2020 at WPI
     </p>
     <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
+      Computer Science Major / Interactive Media and Game Development Minor
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      Previous Computer Science Courses I Have Taken at WPI
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Introduction to Program Design</li>
+      <li>Object-Oriented Program Design</li>
+      <li>Discrete Mathematics</li>
+      <li>Systems Programming Concepts</li>
+      <li>Introduction to Machine and Assembly Language</li>
+      <li>Algorithms</li>
+      <li>Foundations of Computer Science</li>
+      <li>Operating Systems</li>
+      <li>Software Engineering</li>
+    </ul>
+    <p>
+      Experience with the Following Technologies and Methods
+    </p>
+    <ul>
+      <li>HTML - <i>some</i></li>
+      <li>CSS - <i>some</i></li>
+      <li>Java - <i>a lot</i></li>
+      <li>JavaScript - <i>none</i></li>
+      <li>Ruby - <i>none</i></li>
+      <li>Python - <i>some</i></li>
+      <li>unit testing - <i>some</i></li>
     </ul>
   </body>
 </html>
