Added my information to the site

--- a/index.html
+++ b/index.html
@@ -4,24 +4,48 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Maggie Goodwin</h1>
     <p>
-      [Self introduction]
+      Hi! I'm super excited for this class, as I've always been curious about Web
+	  Development. I've dabbled here and there, but I want something I can really
+	  sink my teeth into. I can't wait to see what everybody ends up making!
     </p>
     <p>
-      [Major and other information]
+	  Class of 2020, Junior
     </p>
     <p>
-      [Other things]
+      Major: Computer Science, Minor: English
     </p>
 
     <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
+    <h4>
+      Work experience
+    </h4>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>Liberty Mutual Intern: June 2015 - August 2018</li>
+    </ul>
+	<h4>
+      Technical experience
+    </h4>
+    <ul>
+      <li>Java/unit testing, through classes</li>
+	  <li>SQL, through internship</li>
+	  <li>HTML/CSS, through tutorials</li>
+	  <li>JavaScript, through tutorials</li>
+    </ul>
+	 <h4>
+      Class History
+    </h4>
+    <ul>
+      <li>CS1101: Intro to CS</li>
+      <li>CS2102: Intro to OOP</li>
+	  <li>CS2303: Intro to Sys</li>
+	  <li>CS2011: Intro to Mach and Asm</li>
+	  <li>CS2022: Discrete Math</li>
+	  <li>CS2223: Algorithms</li>
+	  <li>CS3013: Operating Sys</li>
+	  <li>CS3041: HCI</li>
+	  <li>CS3733: Soft Eng</li>
     </ul>
   </body>
 </html>
