added download resume, started readme, changed font

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -17,18 +17,18 @@
         /
         <a href="mailto:svadivazhagu@wpi.edu">e-mail me</a>
         /
-        <a href="suryaResumeAug.pdf" target="_blank">résumé</a>
+        <a href="suryaResumeAug.pdf" download>résumé</a>
     </div>
     <h3>objective</h3>
     <p>
-     passionate computer science student looking to leverage my experience for the purposes of <br>
-     enhanced web and system development while gaining experience about the industry and the current state of the CS world. </br> 
+     passionate computer scientist looking to leverage my experience in <br>
+     web and system development to solve real-world problems while gaining <br>experience about the industry and the current state of the CS world. </br> 
     </p>
     <h3>education</h3>
     <ul><li>Computer Science @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
-        <li><i>pursuing a B.Sc in Computer Science.</i></li> </ul>
+        <li><i>B.Sc in Computer Science.</i></li> </ul>
         <li>Bioinformatics & Computational Biology (BCB) @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
-        <li><i>pursuing a Minor in BCB.</i></li> </ul>
+        <li><i>Minor in BCB.</i></li> </ul>
     </ul>      
     <h3>courses @ WPI</h3>
     <ul>
