--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <style>
+    body {background-color: powderblue;}
+    h1   {color: blue;}
+    p    {color: red;}
+</style>
     <meta charset="utf-8">
   </head>
   <body>
