Added link to my LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <p>
       Computer Science Major / Interactive Media and Game Development Minor
     </p>
-
+    <p>
+      Connect with me on <a href="https://www.linkedin.com/in/trevor-weiler-92012214a/">LinkedIn</a>!
+    </p>
     <h2>Experience</h2>
     <p>
       Previous Computer Science Courses I Have Taken at WPI
