--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
+<!--Assignmemnt 1 By Daniel McDonough 8/28 -->
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-     <link rel="stylesheet" type="text/css" href="./styles.css">
+    <!--Custom Stylesheet -->
+     <link rel="stylesheet" type="text/css" href="./styles.min.css">
           <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-
-      <!-- jQuery library -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-      <!-- Latest compiled JavaScript -->
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-  </head>
   <body>
+    <!--Jumbotron -->
     <div class="jumbotron jumbotron-fluid bg-dark">
+      <!--Typing animation container -->
+
   <div class="container typewriter">
     <h1>Hello, I am Daniel McDonough</h1>
     <h2><b>Majors</b>: CS &amp; BCB &#09;&#09; <b>Year</b>: 2020</h2>
   </div>
 </div>
-
+<!--Body container -->
 <div class="container">
   <div class="row">
+    <!--Courses Column-->
     <div class="col-lg-5 col-sm-4">
-<h3 class="card-title">Noteable Courses</h3>
+<h3 class="card-title">Noteable Courses Taken</h3>
 <a href="https://github.com/Mcdonoughd/CS3013" ><div class="well">Operating Systems (CS3013)</div></a>
 <a href="https://github.com/Mcdonoughd/CS3431" ><div class="well">Databases (CS3431)</div></a>
 <a href="https://github.com/Mcdonoughd/CS4803" ><div class="well">Data Mining (CS4803)</div></a>
@@ -36,20 +34,28 @@
     </div>
       <div class="col-lg-2">
       </div>
+
+
+      <!--Experience Column-->
     <div class="col-lg-5 col-sm-4">
       <h3 class="card-title">Relative Experience </h3>
       <div class="table-responsive ">
         <table class="table">
 
           <tbody>
+
+            <!--HTML PROGRESS BAR -->
             <tr>
-              <td>HTML</td>
-              <td><div class="progress">
+              <td >HTML</td>
+              <td ><div class="progress" >
                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="100"
-               aria-valuemin="0" aria-valuemax="100" style="width:100%">
+               aria-valuemin="0" aria-valuemax="100" style="width:100%;">
                  Relatively Most Experienced
-               </div</td>
+               </div>
+             </div></td>
             </tr>
+
+            <!--CSS PROGRESS BAR -->
             <tr>
               <td>CSS</td>
               <td><div class="progress">
@@ -59,6 +65,8 @@
                 </div>
               </div></td>
             </tr>
+
+            <!--JAVA PROGRESS BAR -->
             <tr>
               <td>JAVA</td>
               <td><div class="progress">
@@ -68,6 +76,8 @@
                 </div>
               </div></td>
             </tr>
+
+            <!--JS PROGRESS BAR -->
             <tr>
               <td>JavaScript</td>
               <td><div class="progress">
@@ -78,6 +88,7 @@
               </div></td>
             </tr>
 
+            <!--Python PROGRESS BAR -->
             <tr>
               <td>Python</td>
               <td><div class="progress">
@@ -87,6 +98,8 @@
                 </div>
               </div></td>
             </tr>
+
+            <!--Ruby PROGRESS BAR -->
             <tr>
               <td>Ruby</td>
               <td><div class="progress">
@@ -96,6 +109,8 @@
                 </div>
               </div></td>
             </tr>
+
+            <!--UT PROGRESS BAR -->
             <tr>
               <td>Unit Testing</td>
               <td><div class="progress">
@@ -109,20 +124,26 @@
         </table>
         </div>
       </div>
+    </div>
+      <h4 class="card-title-sm">Interests / Hobbies</h4>
+    <div class="row">
+<div class="col-lg-2 col-sm-4  ">
+  </div>
+        <!--Other info links -->
+        <div class="col-lg-8 col-sm-4  ">
 
-      </body>
-      </html>
+          <ul class="list-inline" >
+    <li><a href="https://play.pokemonshowdown.com/"><div class="well well-sm" >Pokemon Showdown</div></a></li>
+    <li><a href="https://jetsetradio.live"><div class="well well-sm">Jet Set Radio Live</div></a></li>
+    <li><a href="https://apo.org/"><div class="well well-sm">Alpha Phi Omega</div></a></li>
+    <li><a href="https://angusnicneven.com/"><div class="well well-sm">Terminal00 (ARG)</div></a></li>
+    <li><a href="https://dandevdone.com/"><div class="well well-sm">Freelancing</div></a></li>
+  </ul>
 
-
-<!--HTML PROGRESS BAR -->
-
-       </div>
-
-
+        </div>
+        <div class="col-lg-2 col-sm-4  ">
+          </div>
     </div>
   </div>
-
-</div>
-
-  </body>
-</html>
+      </body>
+      </html>
