--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Michael Taylor</h1>
     <p>
       [Self introduction]
     </p>
     <p>
-      [Major and other information]
+      I'm a computer Science Senior minoring in Data Science. My focus is in software development and app/web development
     </p>
     <p>
       [Other things]
@@ -20,7 +20,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
+      <li>Digital Federal Credit Union</li>
+      <li>Raytheon</li>
       <li>WPI</li>
     </ul>
   </body>
