updated index to contain my info

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about John O'Leary</h1>
     <p>
-      [Self introduction]
+      I am a senior at WPI, looking to pursue a career in computer engineering
     </p>
     <p>
-      [Major and other information]
+      Electrical and Computer Engineering Major seeking a minor in Computer Science
     </p>
     <p>
-      [Other things]
+      My CS experience is in object oriented, system programming, and machine org & assembly
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      My only real experience is with Java and C programming for embedded circuitry.
     </p>
     <ul>
       <li>IBM/Rational</li>
