fade for all elements set with delay

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 align="middle" style=" margin-bottom: 5px;">surya vadivazhagu</h1>
-    <div style="display: flex; justify-content: center;">
-    <img src="self.jpg" alt="Avatar">
+    <div id=fadeName><h1 align="middle" style=" margin-bottom: 5px;">surya vadivazhagu</h1></div>
+    <div id=fadeAvatar style="display: flex; justify-content: center;" alt="Avatar"> 
+    <img src="self.jpg" >
   </div>
-    <div class="topnav" align="middle">
+    <div id =fadeNav class="topnav" align="middle">
         <a class="active" href="https://open.spotify.com/user/r3ld3rn?si=RAfd5akfShGcp2anc8vSyQ" target="_blank">spotify</a>
         /
         <a href="https://github.com/svadivazhagu" target="_blank" >github</a>
@@ -19,18 +19,30 @@
         /
         <a href="suryaResumeAug.pdf" download>résumé</a>
     </div>
+    <div id=fadeObjectiveTitle>
     <h3>objective</h3>
+    </div>
+    <div id=fadeObjectiveContent>
     <p>
      passionate computer scientist looking to leverage my experience in <br>
      web and system development to solve real-world problems while gaining <br>experience about the industry and the current state of the CS world. </br> 
     </p>
+    </div>
+    <div id=fadeEducationTitle>
     <h3>education</h3>
+    </div>
+    <div id=fadeEducationContent>
     <ul><li>Computer Science @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
         <li><i>B.Sc in Computer Science.</i></li> </ul>
         <li>Bioinformatics & Computational Biology (BCB) @ Worcester Polytechnic Institute (2016-2020):</li> <ul>
         <li><i>Minor in BCB.</i></li> </ul>
-    </ul>      
+    </ul>
+</div>
+<div id=fadeCoursesTitle>   
+    
     <h3>courses @ WPI</h3>
+</div>
+    <div id=fadeCoursesContent>
     <ul>
         <li>CS-3733 <i>Software Engineering</i></li>
         <li>CS-3043 <i>Social Implications of Computing</i></li>
@@ -38,8 +50,12 @@
         <li>CS-2011 <i>Assembly & Machine Language</i></li>
         <li>CS-2102 <i>Systems Programming Concepts</i></li>
     </ul>
-    <h3>programmatic experience</h3> 
-    hover over each language to reveal my experience! <br>
+</div>   
+<div id =fadeSkillsTitle>
+    <h3>skills</h3> 
+    hover over each for a surprise! <br>
+    </div>
+    <div id=fadeSkillsContent>
     <ul>
         <li> <div class="tooltip">html 
             <span class="tooltiptext">I've designed personal web pages as well as for campus clubs and have a decent amount of experience with HTML.</span>
@@ -57,9 +73,12 @@
             <span class="tooltiptext">Good experience with JUnit as well as Mockito for Java unit testing. Have used Postman to test my APIs.</span>
           </li>
     </ul>
-   
+</div>
+   <div id=fadeWorkTitle>
     <h3>
         past work    </h3>
+    </div>
+    <div id =fadeWorkContent>
     <ul>
       <li>TraceLink, Inc.</li>
         <ul>
@@ -70,6 +89,5 @@
             <li>Community Outreach Intern, <i>May 2017 - Aug. 2017</i></li>
         </ul>
     </ul>
-  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
-  
+</div>  
 </html>
