changed from resume -> cv

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         /
         <a href="mailto:svadivazhagu@wpi.edu">e-mail me</a>
         /
-        <a href="suryaResumeAug.pdf" download>résumé</a>
+        <a href="suryaResumeAug.pdf" download>cv</a>
     </div>
     <div id=fadeObjectiveTitle>
     <h3>objective</h3>
