index.html changed and css added

--- a/index.html
+++ b/index.html
@@ -2,26 +2,50 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+      
+      <!-- Custom styles for this template -->
+        <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Harsh Rana</h1>
     <p>
-      [Self introduction]
+        Hello World! My name is Harsh and I'm a student at <b>Worcester Polytechnic Institute</b>. I'm passionate about data analytics, visualization and machine learning. Someday, I hope to work in a quant/hedge fund solving complex financial problems using computer science.
+        
+        Outside of academics, I highly enjoying reading self-help and finacial books. Some of my favorites include <i>The way of the superior man, How to win friends and influence people</i> and most recently, <i>The $100 Startup.</i> I also enjoy rock climbing (I started over the summer of 2018 and am a complete beginner), watching TED talks, running and learning new things.
     </p>
     <p>
-      [Major and other information]
+        <ul>
+            <li>Major: Computer Science</li>
+            <li>Minor: Data Science</li>
+            <li>Class year: 2019</li>
+            <li>Favorite Color: Black</li>
+            <li>Favorite Simpson: Homer</li>
+        </ul><br>
     </p>
     <p>
-      [Other things]
+        Here's my favorite CS classes (that I've taken) at WPI so far:
+        <ul>
+            <li>Human Computer Interaction</li> 
+            <li>Machine Learning</li> 
+            <li>Introduction to Artificial Intelligence</li>
+            <li>Software Engineering</li> 
+            <li>Mobile &amp; Ubiquitous Computing</li> 
+        </ul>
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+        While I've never had an official software engineering/CS internship, this past year I worked with IPG Photonics and developed a web application and database to store their test data. It was a very good experience and I learnt a lot about the full-stack web development process. <br><br>
+        Here's my experience levels with some of the technologies covered in this course:
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>HTML: A lot</li>
+      <li>CSS: A lot</li>
+      <li>Java: A lot</li>
+      <li>JavaScript: Some</li>
+      <li>Ruby: None</li>
+      <li>Python: A lot</li>
+      <li>Unit Testing: None</li>                
     </ul>
   </body>
 </html>
