--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </p>
   </div>
   <div id="center">
-    <h1 style="margin-bottom:40px;">Information about [<b>Yufei Gao</b>]</h1>
+    <h1 style="margin-bottom:40px;">Information about Yufei Gao</h1>
     <p>
       WPI class of 2020  <u style = "color:grey;">(plan to graduate in 2019)</u>
     </p>
@@ -41,7 +41,7 @@
     </p>
     <p>
       Favorite meme:<br>
-      <img src = "https://pics.me.me/my-code-doesnvt-work-have-no-idea-why-my-code-14032928.png" width="220px" height="350px" style="margin-left:90px; margin-top:5px;">
+      <img src = "https://pics.me.me/my-code-doesnvt-work-have-no-idea-why-my-code-14032928.png" width="220px" height="350px" style="margin-top:1em;">
     </p>
   </div>
   <div id="right">
