Minor updates to index.html

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <body>
     <h1>Information about Michael Taylor</h1>
     <p>
-      [Self introduction]
+      Hi i'm Michael Taylor. I'm a Senior here at WPI.
     </p>
     <p>
-      I'm a computer Science Senior minoring in Data Science. My focus is in software development and app/web development
+      I'm a computer Science Major minoring in Data Science. My focus is in software development and app/web development
     </p>
     <p>
       [Other things]
@@ -23,6 +23,18 @@
       <li>Digital Federal Credit Union</li>
       <li>Raytheon</li>
       <li>WPI</li>
+    </ul>
+	<p>
+      Webware experience
+    </p>
+    <ul>
+      <li>HTML </li>
+      <li>CSS</li>
+      <li>Javascipt</li>
+	  <li>Java</li>
+	  <li>Python</li>
+	  <li>Unit Testing</li>
+	  <li>Vue.js</li>
     </ul>
   </body>
 </html>
